[package]
name = "wallhaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["cargo", "derive"] }
colored = "2"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11.12", features = ["json"] }
anyhow = "1.0.65"
jsonxf = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
rand = "0.8.5"
indicatif = "0.17.1"
lazy_static = "1.4.0"
walkdir = "2.3.2"
futures = "0.3.27"
config = "0.13.3"
